@@ -1,16 +1,11 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.service.notify.NotificationClient;
@@ -18,55 +13,40 @@ import uk.gov.service.notify.NotificationClient;
 import java.util.List;
 import java.util.Map;
 
+import static org.apache.http.HttpStatus.SC_BAD_REQUEST;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.CAFCASS_SUBMISSION_TEMPLATE;
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.HMCTS_COURT_SUBMISSION_TEMPLATE;
-import static uk.gov.hmcts.reform.fpl.utils.ResourceReader.readBytes;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(CaseSubmissionController.class)
 @OverrideAutoConfiguration(enabled = true)
-class CaseSubmissionControllerSubmittedTest {
-
-    private static final String AUTH_TOKEN = "Bearer token";
-    private static final String USER_ID = "1";
-    private static final ObjectMapper MAPPER = new ObjectMapper();
+class CaseSubmissionControllerSubmittedTest extends AbstractControllerTest {
 
     @MockBean
     private NotificationClient notificationClient;
-    @Autowired
-    private MockMvc mockMvc;
 
-    @Test
-    void shouldReturnUnsuccessfulResponseWithNoData() throws Exception {
-        mockMvc
-            .perform(post("/callback/case-submission/submitted")
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID))
-            .andExpect(status().is4xxClientError());
+    CaseSubmissionControllerSubmittedTest() {
+        super("case-submission");
     }
 
     @Test
-    void shouldReturnUnsuccessfulResponseWithMalformedData() throws Exception {
-        mockMvc
-            .perform(post("/callback/case-submission/submitted")
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("Mock"))
-            .andExpect(status().is4xxClientError());
+    void shouldReturnUnsuccessfulResponseWithNoData() {
+        postSubmittedEvent(new byte[]{}, SC_BAD_REQUEST);
+    }
+
+    @Test
+    void shouldReturnUnsuccessfulResponseWithMalformedData() {
+        postSubmittedEvent("Mock".getBytes(), SC_BAD_REQUEST);
     }
 
     @Test
     void shouldBuildNotificationTemplatesWithCompleteValues() throws Exception {
-        List<String> ordersAndDirections = ImmutableList.of("Emergency protection order",
-            "Contact with any named person");
+        List<String> ordersAndDirections = List.of("Emergency protection order", "Contact with any named person");
         Map<String, Object> expectedHmctsParameters = ImmutableMap.<String, Object>builder()
             .put("court", "Family Court")
             .put("localAuthority", "Example Local Authority")
@@ -74,7 +54,10 @@ class CaseSubmissionControllerSubmittedTest {
             .put("fullStop", "No")
             .put("ordersAndDirections", ordersAndDirections)
             .put("timeFramePresent", "Yes")
-            .put("timeFrameValue", "Same day")
+            .put("timeFrameValue", "same day")
+            .put("urgentHearing", "Yes")
+            .put("nonUrgentHearing", "No")
+            .put("firstRespondentName", "Smith")
             .put("reference", "12345")
             .put("caseUrl", "http://fake-url/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
             .build();
@@ -86,18 +69,15 @@ class CaseSubmissionControllerSubmittedTest {
             .put("fullStop", "No")
             .put("ordersAndDirections", ordersAndDirections)
             .put("timeFramePresent", "Yes")
-            .put("timeFrameValue", "Same day")
+            .put("timeFrameValue", "same day")
+            .put("urgentHearing", "Yes")
+            .put("nonUrgentHearing", "No")
+            .put("firstRespondentName", "Smith")
             .put("reference", "12345")
             .put("caseUrl", "http://fake-url/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
             .build();
 
-        mockMvc
-            .perform(post("/callback/case-submission/submitted")
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(readBytes("core-case-data-store-api/callback-request.json")))
-            .andExpect(status().isOk());
+        postSubmittedEvent("core-case-data-store-api/callback-request.json");
 
         verify(notificationClient, times(1)).sendEmail(
             eq(HMCTS_COURT_SUBMISSION_TEMPLATE), eq("admin@family-court.com"), eq(expectedHmctsParameters), eq("12345")
@@ -126,6 +106,9 @@ class CaseSubmissionControllerSubmittedTest {
             .put("ordersAndDirections", "")
             .put("timeFramePresent", "No")
             .put("timeFrameValue", "")
+            .put("urgentHearing", "No")
+            .put("nonUrgentHearing", "No")
+            .put("firstRespondentName", "")
             .put("reference", "12345")
             .put("caseUrl", "http://fake-url/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
             .build();
@@ -138,17 +121,14 @@ class CaseSubmissionControllerSubmittedTest {
             .put("ordersAndDirections", "")
             .put("timeFramePresent", "No")
             .put("timeFrameValue", "")
+            .put("urgentHearing", "No")
+            .put("nonUrgentHearing", "No")
+            .put("firstRespondentName", "")
             .put("reference", "12345")
             .put("caseUrl", "http://fake-url/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
             .build();
 
-        mockMvc
-            .perform(post("/callback/case-submission/submitted")
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(MAPPER.writeValueAsString(request)))
-            .andExpect(status().isOk());
+        postSubmittedEvent(request);
 
         verify(notificationClient, times(1)).sendEmail(
             eq(HMCTS_COURT_SUBMISSION_TEMPLATE), eq("admin@family-court.com"), eq(expectedHmctsParameters), eq("12345")
